--- a/assets/sass/_tables.scss
+++ b/assets/sass/_tables.scss
@@ -252,7 +252,7 @@ table {
 					text-align: right;
 					white-space: nowrap;
 					width: 1px;
-					min-width: auto;
+					min-width: 38px; // So cells don't collapse when empty
 					.status-badge {
 						@include border-radius (2px);
 						display: inline-block;
